syntax = "proto3";
option java_multiple_files = true;
option java_package = "com.respawnmarket";
option java_outer_classname = "ReSpawnMarketServiceProto";
package com.respawnmarket;

message Customer
{
  int32 id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string password = 5;
  string phone_number = 6;
}

message Address
{
  int32 id = 1;
  string street_name = 2;
  string secondary_unit = 3;
  int32 postal_code = 4;
}

message Postal
{
  int32 postal_code = 1;
  string city = 2;
}

message CustomerAddress
{
  int32 customer_id = 1;
  int32 address_id = 2;
}

//  Request(parameter) and Response(return) Messages for Logic Service
message RegisterCustomerRequest
{
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  string password = 4;
  string phone_number = 5;
  string street_name = 6;
  string secondary_unit = 7;
  int32 postal_code = 8;
  string city = 9;
}

message RegisterCustomerResponse
{
  Customer customer = 1;
  Address address = 2;
  Postal postal = 3;
}

message GetCustomerRequest
{
  int32 customer_id = 1;
}

message GetCustomerResponse
{
  Customer customer = 1;
  repeated Address addresses = 2;
}


// use case for "Register" (only customer)
service CustomerRegisterService
{
  rpc RegisterCustomer (RegisterCustomerRequest) returns (RegisterCustomerResponse);
}